<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root_screen">
    <PreferenceCategory android:title="常用">
        <ListPreference
            android:key="pid"
            android:entries="@array/pid"
            android:entryValues="@array/pid"
            android:title="语种,识别模型,在线语义"
            android:summary=""
            android:defaultValue="@string/pid_default"
            android:dialogTitle="语种, PID"/>
        <ListPreference
            android:key="decoder"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="纯在线/在线和离线"
            android:entries="@array/decoder_list"
            android:entryValues="@array/decoder_list"
            android:summary=""
            android:title="纯在线 或 在线+离线, DECODER" />
    </PreferenceCategory>
    <PreferenceCategory android:title="高级">
        <ListPreference
            android:key="vad"
            android:entries="@array/vad_list"
            android:entryValues="@array/vad_list"
            android:title="VAD算法"
            android:summary=""
            android:defaultValue="@string/vad_default"
            android:dialogTitle="VAD"/>
        <ListPreference
            android:key="vad.endpoint-timeout"
            android:defaultValue="@string/vad_timeout_default"
            android:dialogTitle="VAD_ENDPOINT_TIMEOUT"
            android:entries="@array/vad_timeout_list"
            android:entryValues="@array/vad_timeout_list"
            android:summary=""
            android:title="VAD时长设置" />
        <ListPreference
            android:key="infile"
            android:defaultValue="@string/infile_default"
            android:dialogTitle="外部音频"
            android:entries="@array/infile_list"
            android:entryValues="@array/infile_list"
            android:summary=""
            android:title="外部音频" />
        <CheckBoxPreference
            android:key="_outfile"
            android:defaultValue="false"
            android:summary="同时开启'音频回调CALLBACK_EVENT_ASR_AUDIO参数'才生效，默认保存路径 /sdcard/baiduAsr/outfile.pcm 见代码中OUT_FILE参数"
            android:title="保存录音" />
        <CheckBoxPreference
            android:key="disable-punctuation"
            android:defaultValue="false"
            android:summary="在选择输入法模型的前提下生效。如用于本地语义解析"
            android:title="禁用标点" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-data"
            android:summary="CALLBACK_EVENT_ASR_AUDIO参数。不需要音频二进制数据的回调，请勿开启，否则影响性能"
            android:title="开启代码中音频回调事件"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-volume"
            android:summary="CALLBACK_EVENT_ASR_VOLUME参数。是否需要音频的音量回调。正常使用请勿开启"
            android:title="开启代码中音量回调事件"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="不常用">
        <CheckBoxPreference
            android:key="_tips_sound"
            android:defaultValue="false"
            android:summary=""
            android:title="提示音" />
    </PreferenceCategory>
</PreferenceScreen>